# StudyHelper

./: .gitignore  README.md  index.md  package.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml
backend/src/: app.ts  index.ts
backend/src/config/: database.ts  environment.ts
backend/src/middleware/: auth.ts  authorization.ts
backend/src/routes/: auth.routes.ts  study.routes.ts
backend/src/services/: auth.service.ts  study.service.ts
backend/src/types/: index.ts
backend/src/utils/: crypto.ts  jwt.ts  logger.ts
engine/: .env.example  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
engine/agents/: __init__.py  diagram_finder.py  planner.py  researcher.py  writer.py
engine/output/: output_summary.md  sample_output.md
engine/utils/: __init__.py  markdown.py  scraper.py
scripts/: workspace-install.ps1  workspace-run.ps1
web/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/app/: empty-state.tsx  metric-card.tsx  option-row.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  separator.tsx  switch.tsx  textarea.tsx
web/src/context/: app-context.tsx
web/src/layouts/: app-layout.tsx
web/src/pages/: activity-page.tsx  auth-page.tsx  generate-page.tsx  library-page.tsx  loading-page.tsx  material-page.tsx  overview-page.tsx
